# TRABALHO03-SISTEMAS-DISTRIBUIDOS-

./: .env  README.md  main.py  pyproject.toml
client/control/: image.py
client/view/: main_window.py
server/: controller.py  orm.py  settings.py
server/data/db/: database.db
server/processing/: image_process.py
server/repositories/: image_repository.py
